a1/brendan_gordon/TEST_PROGRAMS/invalidtype/grady_weber/wrongCondition2.min
#wrong condition2
var x : float;
x = 3.14;
while x do
    x = x + 1.0;
done

